# tiralib

./: .gitignore  CMakeLists.txt  LICENSE.txt  et --hard HEAD~1
cmake/: FindANN.cmake  FindCNPY.cmake  FindFANN.cmake  FindGLEW.cmake  FindGLFW.cmake  FindGLUT.cmake  FindLAPACKE.cmake
docs/: Doxyfile  ntsv.py  nwt_format.pptx  test.ntsv  vasc.docx
python/: cubify.py  npy2nrrd  npy2obj.py  stack2nrrd.py  tensors.py  test_interactive_tk.py
python/cuda_ext/: CMakeLists.txt
python/tensors_lib/: cuda_wrappers.py  metrics.py  noise.py  optimize.py  phantoms.py  plots.py
python/tests/: test_analytical_vs_numerical.py  test_cpu_gpu.py  test_cuda_vs_python.py  test_fast_vote.py
python/tira/: batch.py  cmap.py  cubify.py  stack.py  tensors.py  vascular.py
python/tira/cuda_ext/: tensorvote_atv.cu  tensorvote_tk.cu
python/tira/tensors_lib/: metrics.py  optimize.py  plots.py  reconstruct.py
python/tira/tests/: test_cpu_gpu.py
templates/: glfw_opengl.cpp
tira/: calculus.h  cmap.h  eigen.cuh  eigen.h  fiber.h  fibernet.h  field.h  filename.h  filter.cuh  filter.h  graphics_gl.h  image.h  obj.h  parser.h  progressbar.h  shapes.h  solvers.h  tensorvote.cuh  tensorvote.h  vasc.h  vascular.h  volume.h
tira/cuda/: callable.h  cudaDiffusion.cuh  cudaEigen.cuh  cudaEigen2D.cuh  cudaGaussianFilter.cuh  cudaGaussianFilter2D.cuh  error.h
tira/functions/: eigen.h  filter.h  tensor.h  tensorvote.h
tira/geometry/: matrix_sq.h  plane.h  quaternion.h  vec3.h
tira/gl/: glErrorHandler.h  glIndexBuffer.h  glShader.h  glTexture.h  glVertexArray.h
tira/graphics/: camera.h  glErrorHandler.h  glFibers.h  glFramebuffer.h  glGeometry.h  glIndexBuffer.h  glMaterial.h  glOrthoView.h  glShader.h  glShaderStrings.h  glShapes.h  glShapes3d.h  glTexture.h  glVertexArray.h  glVertexBuffer.h  glVertexBufferLayout.h  glVolume.h  shapes.h  shapes3d.h  volume.h
tira/graphics/shaders/: brewer_pts.shader  cmap_fragment.shader  cmap_vertex.shader  fiber_id.shader  vf_basic.shader  vf_brewer.shader
tira/graphics/shapes/: circle.h  cube.h  cylinder.h  geometry.h  icosahedron.h  icosphere.h  mesh_line.h  mesh_triangle.h  obj.h  rectangle.h  shape.h  simplemesh.h  sphere.h  superquadric.h
tira/hardware/: ThorlabsCamera.h  ThorlabsKinesis.h  ThorlabsStage.h
tira/image/: colormap.h  image.h
tira/math/: eigen.cuh  eigen.h
tira/optics/: beam.h  planewave.h
tira/shapes/: circle.h  cube.h  cylinder.h  geometry.h  icosahedron.h  icosphere.h  lmesh.h  obj.h  rectangle.h  sphere.h  superquadric.h  tmesh.h
tira/thinning/: lohou_thinning.h
